--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-<div id="root" style="height:100%;">
-</div>
+<div id="root" style="height:100%;"></div>
+<div id="modal"></div>
 </body>
 </html>
